--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 
+.commands
+assets/jupiter.xcf
+assets/mars.xcf
+assets/neptune.xcf
+assets/saturn.xcf
+assets/sun.xcf
+assets/uranus.xcf
+chart.html
+gravity.html
+primes.html
